--- a/Formulario.html
+++ b/Formulario.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <link href="inicio.css" rel="stylesheet">
     <title>Formulario</title>
+    <style>
+    </style>
 </head>
 <body>
     <div class="wrapper">
