--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="inicio.css" rel="stylesheet">
+    <link href="formulario.css" rel="stylesheet">
     <title>Formulario</title>
     <style>
     </style>
