--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link href="formulario.css" rel="stylesheet">
+    <meta charset="UTF-8">
     <title>Formulario</title>
-    <style>
-    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -26,11 +24,16 @@
                 <input type="text" placeholder="Ar condicionado" required>
                 
             </div>
-            </div>
             <div class="input-box">
                 <input type="text" placeholder="Projetor" required>
                 
             </div>
+            <form action="/upload" method="post" enctype="multipart/form-data">
+                <label for="imageUpload" class="upload-button">Selecione uma imagem</label>
+                <input type="file" id="imageUpload" name="imageUpload" accept="image/*">
+                <p class="file-name" id="fileName">Nenhum arquivo selecionado</p>
+            </form>
+            <button type="submit" class="btn">Enviar</button>
             <a href="../index.html">Voltar</a>
         </form>
     </div>
