--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <link href="formulario.css" rel="stylesheet">
     <title>Formulario</title>
 </head>
 <body>
