--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <link href="formulario.css" rel="stylesheet">
     <title>Formulario</title>
+    <style>
+    </style>
 </head>
 <body>
     <div class="wrapper">
