--- a/mezanino.html
+++ b/mezanino.html
@@ -21,6 +21,12 @@
             <img class="mapa" src="imagens/Mapa-M.jpeg">
         </div>
         <br>
+         <div class="bloco">
+            <div class="colunas">
+                <div class="andar"><a href="mezanino.html">Mezanino</a></div>
+                <div class="andar"><a href="subsolo1.html">Subsolo 01</a></div>
+            </div>
+        </div>
         <div class="bloco">
             <p class="info-titulo">QRCode</p>
             <img class="QRCode" src="imagens/QRCode-M.png">
