--- a/mezanino.html
+++ b/mezanino.html
@@ -23,8 +23,8 @@
         <br>
          <div class="bloco">
             <div class="colunas">
-                <div class="andar"><a href="mezanino.html">Mezanino</a></div>
                 <div class="andar"><a href="subsolo1.html">Subsolo 01</a></div>
+                <div class="andar"><a href="subsolo2.html">Subsolo 02</a></div>
             </div>
         </div>
         <div class="bloco">
