--- a/subsolo1.html
+++ b/subsolo1.html
@@ -10,6 +10,12 @@
     <div class="menu">
         <a href="inicio.html"><img src="imagens/logo.png"></a>
     </div>
+     <div class="bloco">
+            <div class="colunas">
+                <div class="andar"><a href="subsolo2.html">Subsolo 02</a></div>
+                <div class="andar"><a href="subsolo3.html">Subsolo 03</a></div>
+            </div>
+        </div>
     <div class="banner"></div>
     <div class="conteúdo">
         <div class="bloco">
