--- a/subsolo1.html
+++ b/subsolo1.html
@@ -10,11 +10,6 @@
     <div class="menu">
         <a href="inicio.html"><img src="imagens/logo.png"></a>
     </div>
-     <div class="bloco">
-            <div class="colunas">
-                <div class="andar"><a href="subsolo2.html">Subsolo 02</a></div>
-                <div class="andar"><a href="subsolo3.html">Subsolo 03</a></div>
-            </div>
         </div>
     <div class="banner"></div>
     <div class="conteúdo">
@@ -23,6 +18,11 @@
             <p class="info-descri">Abaixo estará o mapa com todas as salas deste andar.</p>
         </div>
         <br>
+        <div class="colunas">
+                <div class="andar"><a href="subsolo2.html">Subsolo 02</a></div>
+                <div class="andar"><a href="subsolo3.html">Subsolo 03</a></div>
+                <div class="andar"><a href="formulario.html">Formulário</a></div>
+            </div>
         <div class="bloco">
             <img class="mapa" src="imagens/Mapa-S1.jpeg">
         </div>
