--- a/mezanino.html
+++ b/mezanino.html
@@ -27,6 +27,7 @@
                 <div class="andar"><a href="subsolo2.html">Subsolo 02</a></div>
                 <div class="andar"><a href="formulario.html">Formulário</a></div>
             </div>
+          </div>
         <div class="bloco">
             <p class="info-titulo">QRCode</p>
             <img class="QRCode" src="imagens/QRCode-M.png">
