--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <style>
     </style>
 </head>
-    
 <body>
+    <div class="menu">
+        <a href="inicio.html"><img src="imagens/logo.png"></a>
+    </div>
     <div class="banner"></div>
     <div class="conteúdo">
         <div class="bloco">
