--- a/subsolo1.html
+++ b/subsolo1.html
@@ -24,8 +24,8 @@
         <br>
          <div class="bloco">
             <div class="colunas">
-                <div class="andar"><a href="subsolo2.html">Subsolo 02</a></div>
-                <div class="andar"><a href="subsolo3.html">Subsolo 03</a></div>
+                <div class="andar"><a href="mezanino.html">Mazanino</a></div>
+                <div class="andar"><a href="subsolo2.html">Subsolo 03</a></div>
                 <div class="andar"><a href="formulario.html">Formulário</a></div>
             </div>
           </div>
