--- a/subsolo3.html
+++ b/subsolo3.html
@@ -21,6 +21,13 @@
             <img class="mapa" src="imagens/Mapa-S3.jpeg">
         </div>
         <br>
+         <div class="bloco">
+            <div class="colunas">
+                <div class="andar"><a href="subsolo2.html">Subsolo 02</a></div>
+                <div class="andar"><a href="subsolo4.html">Subsolo 04</a></div>
+                <div class="andar"><a href="formulario.html">Formulário</a></div>
+            </div>
+          </div>
         <div class="bloco">
             <p class="info-titulo">QRCode</p>
             <img class="QRCode" src="imagens/QRCode-S3.png">
