--- a/subsolo4.html
+++ b/subsolo4.html
@@ -21,6 +21,12 @@
             <img class="mapa" src="imagens/Mapa-S4.jpeg">
         </div>
         <br>
+         <div class="bloco">
+            <div class="colunas">
+                <div class="andar"><a href="subsolo3.html">Subsolo 03</a></div>
+                <div class="andar"><a href="formulario.html">Formulário</a></div>
+            </div>
+          </div>
         <div class="bloco">
             <p class="info-titulo">QRCode</p>
             <img class="QRCode" src="imagens/QRCode-S4.png">
