--- a/subsolo4.html
+++ b/subsolo4.html
@@ -24,6 +24,7 @@
          <div class="bloco">
             <div class="colunas">
                 <div class="andar"><a href="subsolo3.html">Subsolo 03</a></div>
+                <div class="andar"><a href="index.html">Início</a></div>
                 <div class="andar"><a href="formulario.html">Formulário</a></div>
             </div>
           </div>
