--- a/terreo.html
+++ b/terreo.html
@@ -21,6 +21,13 @@
             <img class="mapa" src="imagens/Mapa-T.jpeg">
         </div>
         <br>
+         <div class="bloco">
+            <div class="colunas">
+                <div class="andar"><a href="index.html">Início</a></div>
+                <div class="andar"><a href="subsolo1.html">Subsolo 01</a></div>
+                <div class="andar"><a href="formulario.html">Formulário</a></div>
+            </div>
+          </div>
         <div class="bloco">
             <p class="info-titulo">QRCode</p>
             <img class="QRCode" src="imagens/QRCode-T.png">
