--- a/terreo.html
+++ b/terreo.html
@@ -23,7 +23,7 @@
         <br>
          <div class="bloco">
             <div class="colunas">
-                <div class="andar"><a href="index.html">Início</a></div>
+                <div class="andar"><a href="mezanino.html">Mezanino</a></div>
                 <div class="andar"><a href="subsolo1.html">Subsolo 01</a></div>
                 <div class="andar"><a href="formulario.html">Formulário</a></div>
             </div>
