--- a/subsolo1.html
+++ b/subsolo1.html
@@ -31,7 +31,7 @@
           </div>
         <div class="bloco">
             <p class="info-titulo">QRCode</p>
-            <img class="QRCode" src="imagens/QRCode-S1.png">
+            <img class="QRCode" src="QRCode-S1.png">
         </div>
     </div>
 </body>
