--- a/terreo.html
+++ b/terreo.html
@@ -30,7 +30,7 @@
           </div>
         <div class="bloco">
             <p class="info-titulo">QRCode</p>
-            <img class="QRCode" src="imagens/QRCode-T.png">
+            <img class="QRCode" src="QRCode-T.png">
         </div>
     </div>
 </body>
