--- a/formulario.html
+++ b/formulario.html
@@ -31,7 +31,7 @@
                 
             </div>
             <button type="submit" class="btn">Enviar</button>
-            <a href="../index.html">Voltar</a>
+            <a href="index.html">Voltar</a>
         </form>
     </div>
 </body>
