--- a/subsolo2.html
+++ b/subsolo2.html
@@ -32,10 +32,10 @@
     <main class="conteúdo">
         <!-- Bloco de introdução -->
         
-            <h1 class="info-titulo">Mapa do Subsolo 1</h1>
-            <p class="info-descri">Mapa do Subsolo 1. Abaixo estão os links para acessar os outros andares da faculdade.</p>
+            <h1 class="info-titulo">Mapa do Subsolo 2</h1>
+            <p class="info-descri">Mapa do Subsolo 2. Abaixo estão os links para acessar os outros andares da faculdade.</p>
             <section class="mapa-scroll">
-        <img src="imagens/Mapa-S1.jpeg" alt="Mapa">
+        <img src="imagens/Mapa-S2.jpeg" alt="Mapa">
         </section>
 
         <!-- Bloco de links para outros andares -->
@@ -43,7 +43,7 @@
             <div class="colunas">
                 <!-- Botões para os outros andares -->
                 <div class="andar">
-                    <a href="subsolo2.html" title="Mapa do Subsolo 02">Subsolo 02</a>
+                    <a href="subsolo1.html" title="Mapa do Subsolo 01">Subsolo 01</a>
                 </div>
                 <div class="andar">
                     <a href="subsolo3.html" title="Mapa do Subsolo 03">Subsolo 03</a>
@@ -55,11 +55,11 @@
         </section>
 
         <div class="QRCode">
-            <img src="QRCodes/QRCode-S1.png" alt="QR Code">
+            <img src="QRCodes/QRCode-S2.png" alt="QR Code">
         </div>
 
         <!-- Botão para voltar para a tela inicial -->
-        <section class="bloco-voltar">
+        <section class="bloco">
             <div class="botao-voltar">
                 <a href="index.html" class="botao" title="Voltar para a tela inicial">Voltar para a Tela Inicial</a>
             </div>
