--- a/subsolo3.html
+++ b/subsolo3.html
@@ -56,7 +56,7 @@
         </section>
 
         <div class="QRCode">
-            <img src="QRCodes/QRCode-S3.png" alt="QR Code">
+            <img src="QRCode-S3.png" alt="QR Code">
         </div>
 
         <!-- Botão para voltar para a tela inicial -->
