--- a/subsolo3.html
+++ b/subsolo3.html
@@ -47,7 +47,7 @@
                     <a href="subsolo1.html" title="Mapa do Subsolo 02">Subsolo 01</a>
                 </div>
                 <div class="andar">
-                    <a href="subsolo2.html" title="Mapa do Subsolo 03">Subsolo 02</a>
+                    <a href="terreo.html" title="Mapa do Térreo">Térreo</a>
                 </div>
                 <div class="andar">
                     <a href="subsolo4.html" title="Mapa do Subsolo 04">Subsolo 04</a>
