--- a/terreo.html
+++ b/terreo.html
@@ -49,7 +49,7 @@
                     <a href="subsolo3.html" title="Mapa do Subsolo 03">Subsolo 03</a>
                 </div>
                 <div class="andar">
-                    <a href="subsolo4.html" title="Mapa do Subsolo 04">Subsolo 04</a>
+                    <a href="mezanino.html" title="Mapa do Mezanino">Mezanino</a>
                 </div>
             </div>
         </section>
