--- a/mezanino.html
+++ b/mezanino.html
@@ -48,7 +48,7 @@
                     <a href="subsolo1.html" title="Mapa do Subsolo 01">Subsolo 01</a>
                 </div>
                 <div class="andar">
-                    <a href="subsolo2.html" title="Mapa do Subsolo 02">Subsolo 02</a>
+                    <a href="terreo.html" title="Mapa do Térreo">Térreo</a>
                 </div>
                 <div class="andar">
                     <a href="formulario.html" title="Entrar em contato com o coordenador">Formulário</a>
