--- a/terreo.html
+++ b/terreo.html
@@ -55,7 +55,7 @@
         </section>
 
         <div class="QRCode">
-            <img src="Design sem nome.png" alt="QR Code">
+            <img src="QRcodeMapa.png" alt="QR Code">
         </div>
 
         <!-- Botão para voltar para a tela inicial -->
