--- a/subsolo4.html
+++ b/subsolo4.html
@@ -54,7 +54,7 @@
         </section>
 
         <div class="QRCode">
-            <img src="QRCode-S4.png" alt="QR Code">
+            <img src="QRcodeMapa.png" alt="QR Code">
         </div>
 
         <!-- Botão para voltar para a tela inicial -->
