--- a/mezanino.html
+++ b/mezanino.html
@@ -58,7 +58,7 @@
 
         
         <div class="QRCode">
-            <img src="QRCode-M.png" alt="QR Code">
+            <img src="QRcodeMapa.png" alt="QR Code">
         </div>
 
        
