--- a/subsolo4.html
+++ b/subsolo4.html
@@ -42,13 +42,13 @@
             <div class="colunas">
                 <!-- Botões para os outros andares -->
                 <div class="andar">
+                    <a href="terreo.html" title="Mapa do Térreo">Térreo</a>
+                </div>
+                <div class="andar">
                     <a href="subsolo1.html" title="Mapa do Subsolo 01">Subsolo 01</a>
                 </div>
                 <div class="andar">
                     <a href="subsolo2.html" title="Mapa do Subsolo 02">Subsolo 02</a>
-                </div>
-                <div class="andar">
-                    <a href="terreo.html" title="Mapa do terreo ">terreo</a>
                 </div>
             </div>
         </section>
