--- a/subsolo1.html
+++ b/subsolo1.html
@@ -43,13 +43,13 @@
             <div class="colunas">
                 <!-- Botões para os outros andares -->
                 <div class="andar">
+                    <a href="terreo.html" title="Mapa do Térreo">Térreo</a>
+                </div>
+                <div class="andar">
                     <a href="subsolo2.html" title="Mapa do Subsolo 02">Subsolo 02</a>
                 </div>
                 <div class="andar">
                     <a href="subsolo3.html" title="Mapa do Subsolo 03">Subsolo 03</a>
-                </div>
-                <div class="andar">
-                    <a href="subsolo4.html" title="Mapa do Subsolo 04">Subsolo 04</a>
                 </div>
             </div>
         </section>
