--- a/terreo.html
+++ b/terreo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mapa interativo da Faculdade UniMetrocamp, explore o mapa do Subsolo 01.">
-    <title>UniMetrocamp - Subsolo 01</title>
+    <title>UniMetrocamp - Térreo</title>
     <link href="inicio.css" rel="stylesheet">
 </head>
 <body>
